Add new v2 hook path CRD setting

--- a/config/crd/bases/nodedisruption.criteo.com_applicationdisruptionbudgets.yaml
+++ b/config/crd/bases/nodedisruption.criteo.com_applicationdisruptionbudgets.yaml
@@ -69,6 +69,22 @@ spec:
                       URL form (`scheme://host:port/path`).
                     type: string
                 type: object
+              hookV2BasePath:
+                description: |-
+                  HookV2BasePath holds the base path for the prepare, ready, cancel hooks that will be
+                  called at different stages of the NodeDisruption lifecycle.
+                  A POST http request containing a Disruption that is being reconciled is sent ot each of the hooks.
+                properties:
+                  caBundle:
+                    description: a PEM encoded CA bundle which will be used to validate
+                      the webhook's server certificate. If unspecified, system trust
+                      roots on the apiserver are used.
+                    type: string
+                  url:
+                    description: URL that will be called by the hook, in standard
+                      URL form (`scheme://host:port/path`).
+                    type: string
+                type: object
               maxDisruptions:
                 description: A NodeDisruption is allowed if at most "maxDisruptions"
                   nodes selected by selectors are unavailable after the disruption.
