Use v2 hook path if configured

--- a/config/crd/bases/nodedisruption.criteo.com_nodedisruptions.yaml
+++ b/config/crd/bases/nodedisruption.criteo.com_nodedisruptions.yaml
@@ -124,6 +124,8 @@ spec:
                   properties:
                     ok:
                       type: boolean
+                    preparing:
+                      type: boolean
                     reason:
                       type: string
                     reference:
@@ -143,6 +145,7 @@ spec:
                       type: object
                   required:
                   - ok
+                  - preparing
                   - reason
                   type: object
                 type: array
