--- a/config/crd/bases/nodedisruption.criteo.com_nodedisruptions.yaml
+++ b/config/crd/bases/nodedisruption.criteo.com_nodedisruptions.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.14.0
+    controller-gen.kubebuilder.io/version: v0.19.0
   name: nodedisruptions.nodedisruption.criteo.com
 spec:
   group: nodedisruption.criteo.com
@@ -45,6 +45,9 @@ spec:
           spec:
             description: NodeDisruptionSpec defines the desired state of NodeDisruption
             properties:
+              duration:
+                description: Duration of the disruption once granted
+                type: string
               nodeSelector:
                 description: Label query over nodes that will be impacted by the disruption
                 properties:
@@ -74,11 +77,13 @@ spec:
                           items:
                             type: string
                           type: array
+                          x-kubernetes-list-type: atomic
                       required:
                       - key
                       - operator
                       type: object
                     type: array
+                    x-kubernetes-list-type: atomic
                   matchLabels:
                     additionalProperties:
                       type: string
@@ -90,7 +95,8 @@ spec:
                 type: object
                 x-kubernetes-map-type: atomic
               retry:
-                description: Configure the retrying behavior of a NodeDisruption
+                description: Retry configuration allows to retry a disruption after
+                  rejection until the given deadline
                 properties:
                   deadline:
                     description: Deadline after which the disruption is not retried
@@ -100,6 +106,10 @@ spec:
                     description: Enable retrying
                     type: boolean
                 type: object
+              startDate:
+                description: StartDate when the disruption should start
+                format: date-time
+                type: string
               type:
                 description: Type of the node disruption
                 type: string
@@ -113,6 +123,8 @@ spec:
                 items:
                   properties:
                     ok:
+                      type: boolean
+                    preparing:
                       type: boolean
                     reason:
                       type: string
@@ -133,6 +145,7 @@ spec:
                       type: object
                   required:
                   - ok
+                  - preparing
                   - reason
                   type: object
                 type: array
