--- a/config/crd/bases/nodedisruption.criteo.com_applicationdisruptionbudgets.yaml
+++ b/config/crd/bases/nodedisruption.criteo.com_applicationdisruptionbudgets.yaml
@@ -183,6 +183,14 @@ spec:
                     type: object
                 type: object
                 x-kubernetes-map-type: atomic
+              supportedNodeDisruptionTypes:
+                description: |-
+                  SupportedNodeDisruptionTypes is the list of node disruption types that this budget supports.
+                  When set, this budget will only be considered during reconciliation of NodeDisruptions whose type
+                  is in this list. When empty, the controller's default node disruption types are used.
+                items:
+                  type: string
+                type: array
             required:
             - maxDisruptions
             type: object
