Replace release action by softprops/action-gh-release
Following repo settings changes, old action is not whitelisted,
new one is.

--- a/.github/workflows/releases.yaml
+++ b/.github/workflows/releases.yaml
@@ -27,7 +27,9 @@ jobs:
     - name: Build
       run: make all
     - name: Upload
-      uses: fnkr/github-action-ghr@v1
+      uses: softprops/action-gh-release@v1
+      with:
+        files: bin/manager
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GHR_PATH: bin/manager
