--- a/chart/templates/applicationdisruptionbudget-crd.yaml
+++ b/chart/templates/applicationdisruptionbudget-crd.yaml
@@ -51,8 +51,8 @@ spec:
           metadata:
             type: object
           spec:
-            description: ApplicationDisruptionBudgetSpec defines the desired state of
-              ApplicationDisruptionBudget
+            description: ApplicationDisruptionBudgetSpec defines the desired state
+              of ApplicationDisruptionBudget
             properties:
               healthHook:
                 description: |-
@@ -66,8 +66,24 @@ spec:
                       roots on the apiserver are used.
                     type: string
                   url:
-                    description: URL that will be called by the hook, in standard URL
-                      form (`scheme://host:port/path`).
+                    description: URL that will be called by the hook, in standard
+                      URL form (`scheme://host:port/path`).
+                    type: string
+                type: object
+              hookV2BasePath:
+                description: |-
+                  HookV2BasePath holds the base path for the prepare, ready, cancel hooks that will be
+                  called at different stages of the NodeDisruption lifecycle.
+                  A POST http request containing a Disruption that is being reconciled is sent ot each of the hooks.
+                properties:
+                  caBundle:
+                    description: a PEM encoded CA bundle which will be used to validate
+                      the webhook's server certificate. If unspecified, system trust
+                      roots on the apiserver are used.
+                    type: string
+                  url:
+                    description: URL that will be called by the hook, in standard
+                      URL form (`scheme://host:port/path`).
                     type: string
                 type: object
               maxDisruptions:
@@ -104,11 +120,13 @@ spec:
                           items:
                             type: string
                           type: array
+                          x-kubernetes-list-type: atomic
                       required:
                       - key
                       - operator
                       type: object
                     type: array
+                    x-kubernetes-list-type: atomic
                   matchLabels:
                     additionalProperties:
                       type: string
@@ -149,11 +167,13 @@ spec:
                           items:
                             type: string
                           type: array
+                          x-kubernetes-list-type: atomic
                       required:
                       - key
                       - operator
                       type: object
                     type: array
+                    x-kubernetes-list-type: atomic
                   matchLabels:
                     additionalProperties:
                       type: string
@@ -164,6 +184,14 @@ spec:
                     type: object
                 type: object
                 x-kubernetes-map-type: atomic
+              supportedNodeDisruptionTypes:
+                description: |-
+                  SupportedNodeDisruptionTypes is the list of node disruption types that this budget supports.
+                  When set, this budget will only be considered during reconciliation of NodeDisruptions whose type
+                  is in this list. When empty, the controller's default node disruption types are used.
+                items:
+                  type: string
+                type: array
             required:
             - maxDisruptions
             type: object
