--- a/chart/templates/nodedisruption-crd.yaml
+++ b/chart/templates/nodedisruption-crd.yaml
@@ -46,6 +46,9 @@ spec:
           spec:
             description: NodeDisruptionSpec defines the desired state of NodeDisruption
             properties:
+              duration:
+                description: Duration of the disruption once granted
+                type: string
               nodeSelector:
                 description: Label query over nodes that will be impacted by the disruption
                 properties:
@@ -75,11 +78,13 @@ spec:
                           items:
                             type: string
                           type: array
+                          x-kubernetes-list-type: atomic
                       required:
                       - key
                       - operator
                       type: object
                     type: array
+                    x-kubernetes-list-type: atomic
                   matchLabels:
                     additionalProperties:
                       type: string
@@ -91,7 +96,8 @@ spec:
                 type: object
                 x-kubernetes-map-type: atomic
               retry:
-                description: Configure the retrying behavior of a NodeDisruption
+                description: Retry configuration allows to retry a disruption after
+                  rejection until the given deadline
                 properties:
                   deadline:
                     description: Deadline after which the disruption is not retried
@@ -101,6 +107,10 @@ spec:
                     description: Enable retrying
                     type: boolean
                 type: object
+              startDate:
+                description: StartDate when the disruption should start
+                format: date-time
+                type: string
               type:
                 description: Type of the node disruption
                 type: string
@@ -114,6 +124,8 @@ spec:
                 items:
                   properties:
                     ok:
+                      type: boolean
+                    preparing:
                       type: boolean
                     reason:
                       type: string
@@ -134,6 +146,7 @@ spec:
                       type: object
                   required:
                   - ok
+                  - preparing
                   - reason
                   type: object
                 type: array
